# TSR

./: AUTHORS  README.md  RST.code-workspace  TODO  io.outlawd.exopy.json  io.outlawd.rst.json  meson.build
.flatpak/: meson.sh
.flatpak-builder/cache/refs/heads/x86_64-io.outlawd.exopy.json/: init
.flatpak-builder/cache/refs/heads/x86_64-io.outlawd.rst.json/: init
.flatpak-builder/checksums/: x86_64-io.outlawd.exopy.json  x86_64-io.outlawd.rst.json
data/: io.outlawd.exopy.appdata.xml.in  io.outlawd.exopy.desktop.in  io.outlawd.exopy.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: exo-py.gresource.xml  exo-py.in  main.py  meson.build  rst.gresource.xml  rst.in  window.py  window.ui
